--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
-
 <html lang="vi">
   <head>
     <meta charset="UTF-8">
-    <title>Ahihihi</title>
+    <title>Thuc hanh bang</title>
   </head>
 
   <body>
-    <p>Chung ta su dung the &lt;h1&gt; </p>
+    <table>
+      <thead>
+        <tr>
+          <th>Tên sản phẩm</th>
+          <th>Giá sản phẩm</th>
+          <th>Số lượng còn lại</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr>
+          <td>Áo thun nam</td>
+          <td>100.000vnd</td>
+          <td>50</td>
+        </tr>
+        <tr>
+          <td>Quần jean nữ</td>
+          <td>200.000vnd</td>
+          <td>20</td>
+        </tr>
+        <tr>
+          <td>Giày thể thao</td>
+          <td>300.000vnd</td>
+          <td>30</td>
+        </tr>
+
+        <tfoot>
+          <tr>
+            <td>Remark</td>
+            <td colspan="2">Chỉ thống kê sản phẩm trong kho</td>
+          </tr>
+        </tfoot>
+      </tbody>
+    </table>
   </body>
 </html>
